style/core.css
@font-face {
  font-family: 'Authentic Sans';
  src: url('/assets/AUTHENTICSans-90.otf');
}

@font-face {
  font-family: 'Terminal Grotesque';
  src: url('/assets/terminal-grotesque.ttf');
}


:root {
  --ratio: 1.4;
  --s0: 1em;
  --s1: calc(var(--s0) * var(--ratio));
  --s2: calc(var(--s1) * var(--ratio));
  --s3: calc(var(--s2) * var(--ratio));
  --s4: calc(var(--s3) * var(--ratio));
  --s5: calc(var(--s4) * var(--ratio));
  --s-1: calc(var(--s0) / var(--ratio));
  --s-2: calc(var(--s-1) / var(--ratio));
  --s-3: calc(var(--s-2) / var(--ratio));
  --s-4: calc(var(--s-3) / var(--ratio));
  --s-5: calc(var(--s-4) / var(--ratio));

  --spacing: var(--s1);
  --stackSpacing: var(--s0);
  
  --dark: rgb(189, 222, 239);
  --black: rgb(70, 116, 91);
  --light: #fffffc;
  --white: white;
  --default: white;

  


  --animLength: 2s;
  --animDelay: 1s;

  
  /* -- contrast: #F5DBF7, C6D4B4*/
  --contrast: #D9CEB8;
  --contrastReadable: #837f79;
}


html, body {
  width: 100%; height: 100%;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: underline;
  cursor: pointer;
}
*::selection {
  background-color: var(--contrast);
}

.relative {
  position: relative;
}

.noEvents {
  pointer-events: none;
}
.hasEvents {
  pointer-events: all;
}

.padded {
  padding: var(--spacing);
}
.padded\:s1 {
  padding: var(--s1);
}
.paddedLeft {
  padding-left: var(--s1);
}
.marginTop {
  margin-top:  var(--spacing);
}

.fullBleed {
  width: 100%;
  height: 100%;
}
.fullHeight {
  height: 100%;
}
.fullWidth {
  width: 100%;
}

.whiteFill {
  background: var(--white);
}
.contrastFill {
  background: var(--contrast);
}

.caption {
  font-size: var(--s0);
  color: var(--contrastReadable);
}
.noOverflow {
  overflow: hidden;
}
.noOverflowX {
  overflow: hidden;
}
.hide {
  display: none;
}
.stack {
  display: flex; 
  flex-direction: column;
  max-width: 100%;
}

.stack > * + * {
  margin-top: var(--stackSpacing);
}

.stack .align-end {
  margin-top: auto;
}

.horizontal-stack {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  
}



.horizontal-stack > * + * {
  margin-left: var(--stackSpacing);
}
.horizontal-stack.no-gap > * + * {
  margin-left: 0;
}

.horizontal-stack .align-end {
  margin-left: auto;
}

.flex-1 {
  flex: 1
}


.narrow {
  width: calc(512px - 2 * var(--spacing));
  max-width: 100%;
  z-index: 2;
}

.narrow img {
  max-width: 100%;
}
input {
  all: unset;
}
input::placeholder {
  color: inherit;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
}

